--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ html {
   color: #fbba00;
 }
 
-.app .color-ea9800 {
-  color: #ea9800;
+.app .color-f19d00 {
+  color: #f19d00;
 }
 
 .app .btn-point {
