--- a/style.scss
+++ b/style.scss
@@ -21,8 +21,8 @@ html {
         color: $colorPoint;
     }
 
-    .color-ea9800 {
-        color: #ea9800;
+    .color-f19d00 {
+        color: #f19d00;
     }
 
     .btn-point {
