--- a/style.scss
+++ b/style.scss
@@ -70,9 +70,13 @@ html {
 
     .exchange {
         background: #fff5de;
+        padding-top: 2rem;
+        margin-bottom: 1rem;
 
         img {
             max-height: 46.8125rem;
+            position:relative;
+            top:1rem
         }
     }
 
